tests/snapshots/cli_with_configuration__that_cli_argument_overrides_configuration_of_main_branch_pattern-2.snap
---
source: tests/cli_with_configuration.rs
description: "Git Graph:\n    * ##SHA## (HEAD -> stem) 0.1.0-pre.1\n\nConfiguration (.git-versioner.yaml):\n    MainBranch: ^another_main_branch$\n    ReleaseBranch: null\n    FeatureBranch: null\n    VersionPattern: null\n"
info:
  program: git-versioner
  args:
    - "--main-branch"
    - stem
---
success: true
exit_code: 0
----- stdout -----
{
  "Major": 0,
  "Minor": 1,
  "Patch": 0,
  "MajorMinorPatch": "0.1.0",
  "PreReleaseTag": "pre.1",
  "PreReleaseTagWithDash": "-pre.1",
  "PreReleaseLabel": "pre",
  "PreReleaseLabelWithDash": "-pre",
  "PreReleaseNumber": "1",
  "BuildMetadata": "",
  "SemVer": "0.1.0-pre.1",
  "AssemblySemVer": "0.1.0",
  "FullSemVer": "0.1.0-pre.1",
  "InformationalVersion": "0.1.0-pre.1",
  "BranchName": "stem",
  "EscapedBranchName": "stem"
}

----- stderr -----
