tests/snapshots/cli_with_configuration__that_cli_argument_overrides_configuration_of_release_branch_pattern.snap
---
source: tests/cli_with_configuration.rs
description: "Git Graph:\n    * ##SHA## (HEAD -> custom-release/1.0.0) 1.0.1-rc.1\n    * ##SHA## (tag: v1.0.0, trunk) 0.1.0-rc.1\n    * ##SHA## 0.1.0-rc.1\n\nConfiguration (.git-versioner.toml):\n    ReleaseBranch = \"whatever-release/(?<BranchName>.*)\"\n"
info:
  program: git-versioner
  args:
    - "--release-branch"
    - custom-release/(?<BranchName>.*)
---
success: true
exit_code: 0
----- stdout -----
{
  "Major": 1,
  "Minor": 0,
  "Patch": 1,
  "MajorMinorPatch": "1.0.1",
  "PreReleaseTag": "rc.1",
  "PreReleaseTagWithDash": "-rc.1",
  "PreReleaseLabel": "rc",
  "PreReleaseLabelWithDash": "-rc",
  "PreReleaseNumber": "1",
  "BuildMetadata": "",
  "SemVer": "1.0.1-rc.1",
  "AssemblySemVer": "1.0.1",
  "FullSemVer": "1.0.1-rc.1",
  "InformationalVersion": "1.0.1-rc.1"
}

----- stderr -----
