tests/snapshots/cli_with_configuration__that_toml_config_file_overrides_default_feature_branch_pattern.snap
---
source: tests/cli_with_configuration.rs
description: "Git Graph:\n    * ##SHA## (HEAD -> my-feature/feature) 0.1.0-feature.1\n    * ##SHA## (trunk) 0.1.0-rc.1\n    * ##SHA## 0.1.0-rc.1\n\nConfiguration (.git-versioner.toml):\n    FeatureBranch = \"my-feature/(?<BranchName>.*)\"\n"
info:
  program: git-versioner
  args: []
---
success: true
exit_code: 0
----- stdout -----
{
  "Major": 0,
  "Minor": 1,
  "Patch": 0,
  "MajorMinorPatch": "0.1.0",
  "PreReleaseTag": "feature.1",
  "PreReleaseTagWithDash": "-feature.1",
  "PreReleaseLabel": "feature",
  "PreReleaseLabelWithDash": "-feature",
  "PreReleaseNumber": "1",
  "BuildMetadata": "",
  "SemVer": "0.1.0-feature.1",
  "AssemblySemVer": "0.1.0",
  "FullSemVer": "0.1.0-feature.1",
  "InformationalVersion": "0.1.0-feature.1"
}

----- stderr -----
